--- a/style.css
+++ b/style.css
@@ -2,13 +2,38 @@ h1 {
   text-align: center;
 }
 
-#game {
+.board {
+  position: relative;
+  display: table;
   margin-left: auto;
   margin-right: auto;
+}
+
+.overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(255,255,255,0.75);
+}
+
+.btn {
+  padding: 8px 24px;
+  font-size: 18px;
+  line-height: 1.2;
+}
+
+#game {
   border-collapse: collapse;
 }
 #game td {
   width: 4px;
   height: 4px;
   border: 1px solid #dcdcdc;
+}
+
+#game .active {
+  background-color: black;
 }
