--- a/style.css
+++ b/style.css
@@ -18,6 +18,9 @@ h1 {
   align-items: center;
   background-color: rgba(255,255,255,0.75);
 }
+.overlay--hide {
+  display: none;
+}
 
 .btn {
   padding: 8px 24px;
@@ -34,6 +37,9 @@ h1 {
   border: 1px solid #dcdcdc;
 }
 
-#game .active {
+.snake {
   background-color: black;
+}
+.food {
+  background-color: green;
 }
