--- a/style.css
+++ b/style.css
@@ -32,8 +32,9 @@ h1 {
   border-collapse: collapse;
 }
 #game td {
-  width: 4px;
-  height: 4px;
+  --size: 16px;
+  width: var(--size);
+  height: var(--size);
   border: 1px solid #dcdcdc;
 }
 
