--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 h1 {
   text-align: center;
 }
+h2 {
+  margin: 0 0 1em;
+}
 
 .board {
   position: relative;
@@ -11,12 +14,13 @@ h1 {
 
 .overlay {
   position: absolute;
+  padding-top: 70px;
   width: 100%;
   height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
   background-color: rgba(255,255,255,0.75);
+  text-align: center;
+  box-sizing: border-box;
 }
 .overlay--hide {
   display: none;
