--- a/style.css
+++ b/style.css
@@ -15,17 +15,10 @@ h2 {
 .controls {
   --color: #0000001a;
   position: absolute;
+  box-sizing: border-box;
   width: 100%;
   aspect-ratio: 1;
   overflow: hidden;
-}
-.controls__wrapper {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%) rotate(45deg);
-  width: 150%;
-  aspect-ratio: 1;
 }
 .controls button {
   position: absolute;
@@ -39,32 +32,108 @@ h2 {
   position: absolute;
   right: 20%;
   bottom: 20%;
-  transform: rotate(-90deg);
   border: 3px solid black;
   border-color: var(--color) var(--color) transparent transparent;
   width: 40px;
   height: 40px;
   content: '';
 }
-.controls button:nth-child(1) {
-  left: 0;
+
+@media (max-width: 699.999px) {
+  .controls {
+    border: 1px solid var(--color);
+  }
+  .controls__wrapper {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%) rotate(45deg);
+    width: 150%;
+    aspect-ratio: 1;
+  }
+  .controls button {
+    width: 50%;
+    height: 50%;
+  }
+  .controls button::before {
+    transform: rotate(-90deg);
+  }
+  .controls button:nth-child(1) {
+    left: 0;
+  }
+  .controls button:nth-child(2) {
+    left: 50%;
+    transform: rotate(90deg);
+  }
+  .controls button:nth-child(3) {
+    top: 50%;
+    transform: rotate(270deg);
+  }
+  .controls button:nth-child(4) {
+    left: 50%;
+    top: 50%;
+    transform: rotate(180deg);
+  }
 }
-.controls button:nth-child(2) {
-  left: 50%;
-  transform: rotate(90deg);
+@media (min-height: 740px) {
+  .controls {
+    top: 100%;
+  }
 }
-.controls button:nth-child(3) {
-  top: 50%;
-  transform: rotate(270deg);
-}
-.controls button:nth-child(4) {
-  left: 50%;
-  top: 50%;
-  transform: rotate(180deg);
+@media (min-width: 700px) {
+  .board {
+    position: static;
+  }
+  .controls {
+    --margin: 210px;
+    --size: 84px;
+
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 100%;
+    height: calc(var(--size) * 2);
+  }
+  .controls button {
+    width: var(--size);
+    height: var(--size);
+  }
+  .controls button::before {
+    left: 50%;
+    top: 50%;
+    transform: rotate(-45deg) translate(-25%, -50%);
+  }
+
+  .controls button:nth-child(1),
+  .controls button:nth-child(4) {
+    left: 50%;
+    transform: translateX(-50%);
+    margin-left: var(--margin);
+  }
+  .controls button:nth-child(4) {
+    transform: translateX(-50%) rotate(180deg);
+    margin-top: calc(var(--size) - 1px);
+  }
+
+  .controls button:nth-child(2),
+  .controls button:nth-child(3) {
+    right: 50%;
+    top: 50%;
+  }
+  .controls button:nth-child(2) {
+    transform: translate(50%, -50%) rotate(90deg);
+    margin-right: var(--margin);
+  }
+  .controls button:nth-child(3) {
+    transform: translate(50%, -50%) rotate(-90deg);
+    margin-right: calc(var(--margin) + var(--size) - 1px);
+  }
 }
 
 .overlay {
   position: absolute;
+  left: 0;
+  top: 0;
   padding-top: 70px;
   width: 100%;
   height: 100%;
